@@ -1,6 +1,6 @@
 # This file is generated by dmake, do not edit.
 
-# make CXX=clang++ MATCHCOMPILER=yes CXXFLAGS="-O1 -fno-omit-frame-pointer -gline-tables-only -DFUZZING_BUILD_MODE_UNSAFE_FOR_PRODUCTION -fsanitize=address -fsanitize-address-use-after-scope -DHAVE_BOOST" LIB_FUZZING_ENGINE="-fsanitize=fuzzer" oss-fuzz-client
+# make CXX=clang++ MATCHCOMPILER=yes CXXOPTS="-O1 -fno-omit-frame-pointer -gline-tables-only -fsanitize=address -fsanitize-address-use-after-scope" CPPOPTS="-DFUZZING_BUILD_MODE_UNSAFE_FOR_PRODUCTION -DHAVE_BOOST" LIB_FUZZING_ENGINE="-fsanitize=fuzzer" oss-fuzz-client
 
 MATCHCOMPILER=yes
 ifndef MATCHCOMPILER
@@ -31,7 +31,13 @@ else
 endif
 
 INCS=-I../lib -isystem../externals/simplecpp -isystem../externals/tinyxml2 -isystem../externals/picojson
-CPPFLAGS=-std=c++11 -g -w $(INCS)
+
+override CXXFLAGS+=-std=c++11 -g -w
+override CPPFLAGS+=$(INCS)
+
+override CXXFLAGS += $(CXXOPTS)
+override CPPFLAGS += $(CPPOPTS)
+override LDFLAGS += $(LDOPTS)
 
 LIBOBJ =      $(libcppdir)/valueflow.o \
               $(libcppdir)/tokenize.o \
@@ -106,10 +112,10 @@ EXTOBJ =      simplecpp.o \
               tinyxml2.o
 
 oss-fuzz-client: $(EXTOBJ) $(LIBOBJ) main.o type2.o
-	${CXX} $(CPPFLAGS) ${CXXFLAGS} -o $@ $^ ${LIB_FUZZING_ENGINE}
+	${CXX} ${CXXFLAGS} -o $@ $^ ${LIB_FUZZING_ENGINE}
 
 no-fuzz: $(EXTOBJ) $(LIBOBJ) main_nofuzz.o type2.o
-	${CXX} $(CPPFLAGS) ${CXXFLAGS} -o $@ $^
+	${CXX} ${CXXFLAGS} -o $@ $^
 
 translate: translate.o type2.o
 	${CXX} -std=c++11 -g ${CXXFLAGS} -o $@ type2.cpp translate.cpp
